crates/proto/tests/snapshots/snapshots__backup_commit_with_generation.snap
---
source: crates/proto/tests/snapshots.rs
assertion_line: 21
expression: json
---
{
  "generation": 31337
}
