crates/proto/tests/snapshots/snapshots__backup_manifest.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "hashes": [
    "aaa0000000000000000000000000000000000000000000000000000000000000",
    "bbb11111111111111111111111111111111111111111111111111111111111111",
    "ccc22222222222222222222222222222222222222222222222222222222222222"
  ]
}
