crates/proto/tests/snapshots/snapshots__backup_missing.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "hashes": [
    "ccc22222222222222222222222222222222222222222222222222222222222222"
  ]
}
