crates/proto/tests/snapshots/snapshots__blob_ticket_request.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "hash": "b4f8e9c2d1a00000000000000000000000000000000000000000000000000000"
}
