crates/proto/tests/snapshots/snapshots__diag_status.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "state": "ONLINE_DIRECT",
  "detail": "last_seen: 2026-07-25T23:11:03Z"
}
