crates/proto/tests/snapshots/snapshots__hello_hex.snap
---
source: crates/proto/tests/snapshots.rs
expression: hex
---
61 00 00 00 7b 22 70 72 6f 74 6f 5f 76 65 72 22 3a 31 2c 22 63 61 70 61 62 69 6c 69 74 69 65 73 22 3a 5b 22 74 68 75 6d 62 6e 61 69 6c 2e 76 31 22 2c 22 76 69 64 65 6f 2e 72 61 6e 67 65 2e 76 31 22 5d 2c 22 64 65 76 69 63 65 5f 6e 61 6d 65 22 3a 22 53 61 6c 61 6d 69 72 61 27 73 20 50 68 6f 6e 65 22 7d
