crates/proto/tests/snapshots/snapshots__hello_json.snap
---
source: crates/proto/tests/snapshots.rs
expression: pretty
---
{
  "capabilities": [
    "thumbnail.v1",
    "video.range.v1"
  ],
  "device_name": "Salamira's Phone",
  "proto_ver": 1
}
