crates/proto/tests/snapshots/snapshots__pair_accepted.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "storage_device_name": "Home PC"
}
