crates/proto/tests/snapshots/snapshots__pair_request_ack_then_poll.snap
---
source: crates/proto/tests/snapshots.rs
expression: json
---
{
  "token": "abcd1234abcd1234abcd1234abcd1234",
  "device_name": "Mom's Phone",
  "role": "member",
  "ack_then_poll": true
}
